Gitignore runtime state files and sync beads
Add .startlock, heartbeat, event log, and log directory to
gitignore. These are transient runtime artifacts from the
beads daemon and deacon.

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,12 @@
 # =============================================================================
 **/state.json
 **/*.lock
+**/*.startlock
 **/registry.json
 daemon/activity.json
+deacon/heartbeat.json
+.events.jsonl
+logs/
 
 # =============================================================================
 # Rig git worktrees (recreate with 'gt sling' or 'gt rig add')
